--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5241,6 +5241,7 @@ input[type="submit"].btn.btn-mini {
   padding: 15px;
   overflow-y: auto;
 	min-height:350px;
+	height:450px;
 }
 
 .modal-form {
