--- a/css/main.css
+++ b/css/main.css
@@ -213,3 +213,26 @@ ul, li{
 .fade{
 	opacity: .3;
 }
+
+.formAddNewDark{
+  background-color: rgb(60, 60, 60);
+  border: 1px solid rgb(0, 0, 0);
+}
+.topBarDividerDark{
+  border-top: 1px solid rgb(40,40,40);
+  border-bottom: 1px solid rgb(40,40,40);
+
+}
+.accordion-groupDark{
+  border: 1px solid rgb(0,0,0) !important;
+}
+.accordion-hoverDark:hover{
+  background: #888 !important;
+  text-decoration: none !important;
+}
+.sepLineDark{
+  background-color: rgb(0,0,0)
+}
+.themeBtn{
+  margin-right: 10px;
+}
