--- a/css/main.css
+++ b/css/main.css
@@ -4,19 +4,15 @@ body {
 	padding-bottom: 40px;
 	background-color: #f5f5f5;
 }
-
-.formAddNew {
+.container{
 	max-width: 900px;
-	padding: 19px 29px 29px;
+	box-sizing: border-box;
+	padding: 20px 30px 30px;
 	margin: 0 auto 20px;
-	background-color: #fff;
+	background: #fff;
 	border: 1px solid #e5e5e5;
-	-webkit-border-radius: 5px;
-		 -moz-border-radius: 5px;
-					border-radius: 5px;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-		 -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-					box-shadow: 0 1px 2px rgba(0,0,0,.05);
+	border-radius: 5px;
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
 }
 .formHeading{
 	margin-bottom: 40px;
@@ -95,23 +91,12 @@ body {
 	 -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
 				box-shadow: 0 1px 2px rgba(0,0,0,.05);
 }
-.trash{
-	margin-top: 30px;
-	font-size: 2em;
-}
 .calendar{
 	font-size: 2em;
 	margin-right: 40px;
 }
 #trash {
-	width:60%;
-	height: 50px;
-	margin-left: -20%;
-	padding-left: 20%;
-	-webkit-transition: text-shadow linear 0.2s;
-	-moz-transition: text-shadow linear 0.2s;
-	-ms-transition: text-shadow linear 0.2s;
-	-o-transition: text-shadow linear 0.2s;
+	font-size: 2em;
 	transition: text-shadow linear 0.2s;
 }
 #trash.active {
