--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
 	padding-bottom: 40px;
 	background-color: #f5f5f5;
 }
+/* main container styling */
 .container{
 	max-width: 900px;
 	box-sizing: border-box;
@@ -13,6 +14,9 @@ body {
 	border: 1px solid #e5e5e5;
 	border-radius: 5px;
 	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+}
+#datepicker{
+	margin-bottom: 10px;
 }
 .formHeading{
 	margin-bottom: 40px;
@@ -44,7 +48,7 @@ body {
 .day{
 	margin-left:5px;
 }
-.whitebg{
+.white-background{
 	background: #fff !important;
 	text-align: left !important;
 }
