--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
 	border-radius: 5px;
 	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
 }
-#datepicker{
+#complex_task_datepicker{
 	margin-bottom: 10px;
 }
 .formHeading{
@@ -177,15 +177,15 @@ z-index: 4000;
 
 
 
-.addSubTask{
+#complex_task_add_subtask{
 	color: rgb(50, 150, 50);
 	font-size: 24px;
 	margin-left: 5px;
 }
-.addSubTask:hover{
+#complex_task_add_subtask:hover{
 	color: rgb(30, 130, 30);
 }
-.addSubTask:active{
+#complex_task_add_subtask:active{
 	color: rgb(20, 120, 20);
 }
 .status{
